--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # ----------------------------------------------------------------------------
 
 *.pyproject.user
+mapa3_curitiba/
 
 *~
 *.autosave
